--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -48,7 +48,9 @@
 <blockquote class="middle">
     <p><%= t('home.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Marjane_Satrapi_mg_7519.jpg"><img src="./images/marjane.jpg"></a>
+      <a href="//commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
+				<img src="./images/nadine.jpg">
+			</a>
       <p><%= t('home.cite') %></p>
     </footer>
   </blockquote>
