--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -8,6 +8,72 @@
 
 <div class="col-md-4">
   <div class="story">
+    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:ready%20to%20travel%20again%3F%20%286225048795%29.jpg">
+    	<img src="./images/story_unreliable.jpg">
+    </a>
+    <h3><%= t('content.story_unreliable_title') %></h3>
+    <p><%= t('content.story_unreliable_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:The_scales_of_justice_(4984060658).jpg">
+    	<img src="./images/story_jury.jpg" >
+    </a>
+    <h3><%= t('content.story_jury_title') %></h3>
+    <p><%= t('content.story_jury_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Socks_2.0.jpeg">
+    	<img src="./images/story_official_use.jpg">
+    </a>
+    <h3><%= t('content.story_official_use_title') %></h3>
+    <p><%= t('content.story_official_use_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Heavens_Above_Her.jpg">
+    	<img src="./images/story_dark_matter.jpg">
+    </a>
+    <h3><%= t('content.story_dark_matter_title') %></h3>
+    <p><%= t('content.story_dark_matter_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class='anchorImg' href="////commons.wikimedia.org/wiki/File:2016-11_Chute_Montmorency_04.jpg">
+    	<img src="./images/story_deletion.jpg">
+    </a>
+    <h3><%= t('content.story_deletion_title') %></h3>
+    <p><%= t('content.story_deletion_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:BLASTS!_(8387139427).jpg">
+    	<img src="./images/story_missing.jpg">
+    </a>
+    <h3><%= t('content.story_missing_title') %></h3>
+    <p><%= t('content.story_missing_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<div class="col-md-4">
+  <div class="story">
     <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Globes_(214425074).jpg">
     	<img src="./images/story_disputed.jpg">
     </a>
