Clean-up HTML5 code
Cleaning-up code by
- removing unnecessary self-closing tags,
- removing unnecessary type attributes,
- removing arbitrary whitespace,
- making links and resources use HTTPS protocol where applicable

Change-Id: I50da0a23d400bdcbe5668e4c18a570ac82fbecba

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -5,7 +5,6 @@
     </span>
   </h1>
 </div>
-
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
@@ -14,7 +13,6 @@
       <dd>341</dd>
     </dl>
   </section>
-
   <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
     <dl>
@@ -23,66 +21,57 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <p class="lead">
     <%= t('content.lead') %>
   </p>
-
   <%= t('content.intro') %>
-
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
+      <a href="https://commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
       	<img src="./images/un_flag.png">
       </a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:ready%20to%20travel%20again%3F%20%286225048795%29.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:ready%20to%20travel%20again%3F%20%286225048795%29.jpg">
     	<img src="./images/story_unreliable.jpg">
     </a>
     <h3><%= t('content.story_unreliable_title') %></h3>
     <p><%= t('content.story_unreliable_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:The_scales_of_justice_(4984060658).jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:The_scales_of_justice_(4984060658).jpg">
     	<img src="./images/story_jury.jpg" >
     </a>
     <h3><%= t('content.story_jury_title') %></h3>
     <p><%= t('content.story_jury_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Socks_2.0.jpeg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Socks_2.0.jpeg">
     	<img src="./images/story_official_use.jpg">
     </a>
     <h3><%= t('content.story_official_use_title') %></h3>
     <p><%= t('content.story_official_use_body') %></p>
   </div>
 </div>
-
-
 <div class="clear"></div>
 <br><br>
-
 <div class="col-md-8 col-md-offset-2">
 	<div class="story">
 		<h3 id="government-request">
-			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br />
+			<small><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</small><br>
 			<%= t('privacy.govt_requests') %>
 		</h3>
-		<hr />
+		<hr>
 		<table>
 			<tr>
 				<td><%= t('graph.new_zealand') %></td>
@@ -107,9 +96,7 @@
 		</table>
 	</div>
 </div>
-
 <div class="clear"></div>
-
 <div class="col-md-12">
 	<div class="analytics">
 		<h2 id="requests-from"><%= t('content.graph_where_from') %></h2>
@@ -125,14 +112,12 @@
 			<li><a class="where_from_tabs" id="where_from_juldec16" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
 			<li><a class="where_from_tabs active" id="where_from_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="where_from_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -140,7 +125,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -148,19 +132,13 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 		</div>
-
 		<div class="col-md-7">
 			<div id="where_from_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
-
 	</div>
-
-
 	<div class="analytics">
 		<h2 id="project-target"><%= t('content.graph_targeted_takedown') %></h2>
 		<ul class="tabs">
@@ -174,14 +152,12 @@
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_juldec16" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
 			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="targeted_takedown_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -189,7 +165,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -197,15 +172,11 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 			<div class="fineprint">
 				<h2>*</h2><p><%= t('content.targeted_takedown_fineprint') %></p>
 			</div>
-
 		</div>
-
 		<div class="col-md-7">
 			<div id="targeted_takedown_graph" class="bar_graph_horizontal"></div>
 		</div>
@@ -213,8 +184,7 @@
 	</div>
 </div>
 <div class="clear"></div>
-<br /> <br /> <br /> <br />
-
+<br><br><br><br>
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
@@ -231,15 +201,12 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <h2><%= t('content.erasure_title') %></h2>
   <%= t('content.erasure_intro') %>
 </div>
-
 <div class="clear"></div>
-<br /> <br /> <br /> <br />
-
+<br><br><br><br>
 <div class="col-md-3">
   <section class="scorecard">
     <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
@@ -248,7 +215,6 @@
       <dd>11</dd>
     </dl>
   </section>
-
   <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jan') %> – <%= t('dates.jun') %> 2017</h2>
     <dl>
@@ -257,56 +223,49 @@
     </dl>
   </section>
 </div>
-
 <div class="col-md-8">
   <h2><%= t('content.dmca_title') %></h2>
   <%= t('content.dmca_intro') %>
   <blockquote>
     <p><%= t('content.erasure_quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
+      <a href="https://commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
       	<img src="./images/lawrence.png">
       </a>
       <p><%= t('content.erasure_cite') %></p>
     </footer>
   </blockquote>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:Heavens_Above_Her.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Heavens_Above_Her.jpg">
     	<img src="./images/story_dark_matter.jpg">
     </a>
     <h3><%= t('content.story_dark_matter_title') %></h3>
     <p><%= t('content.story_dark_matter_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="////commons.wikimedia.org/wiki/File:2016-11_Chute_Montmorency_04.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:2016-11_Chute_Montmorency_04.jpg">
     	<img src="./images/story_deletion.jpg">
     </a>
     <h3><%= t('content.story_deletion_title') %></h3>
     <p><%= t('content.story_deletion_body') %></p>
   </div>
 </div>
-
 <div class="col-md-4">
   <div class="story">
-    <a class='anchorImg' href="//commons.wikimedia.org/wiki/File:BLASTS!_(8387139427).jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:BLASTS!_(8387139427).jpg">
     	<img src="./images/story_missing.jpg">
     </a>
     <h3><%= t('content.story_missing_title') %></h3>
     <p><%= t('content.story_missing_body') %></p>
   </div>
 </div>
-
 <div class="clear"></div>
 <br><br>
-
 <div class="col-md-12">
-
 	<div class="analytics">
 		<h2 id="dcma-takedown"><%= t('content.graph_dmca_requests') %></h2>
 		<ul class="tabs">
@@ -321,14 +280,12 @@
 			<li><a class="dmca_requests_tabs" id="dmca_requests_juldec16" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
 			<li><a class="active dmca_requests_tabs" id="dmca_requests_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="dmca_requests_legend">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jul - Dec 2016</h2>
 			    <dl>
@@ -336,7 +293,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jul - Dec 2016</h2>
 			    <dl>
@@ -344,17 +300,13 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
 		</div>
-
 		<div class="col-md-7">
 			<div id="dmca_requests_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
-
 	</div>
-
 	<div class="analytics">
 		<h2 id="wikimedia"><%= t('content.graph_targeted_dmca') %></h2>
 		<ul class="tabs">
@@ -368,14 +320,12 @@
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_juldec16" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2016</a></li>
 			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_janjun17" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2017</a></li>
 		</ul>
-
 		<div class="col-md-4" id="targeted_dmca_granted">
 			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
 			</div>
-
 			<section class="scorecard analytics__scorecard scorecard--1">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -383,7 +333,6 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<section class="scorecard analytics__scorecard scorecard--2">
 				<h2>Jan - Jun 2016</h2>
 			    <dl>
@@ -391,26 +340,19 @@
 			      <dd>0</dd>
 			    </dl>
 			</section>
-
 			<div class="clear"></div>
-
 			<div class="fineprint">
 				<h2>*</h2><p><%= t('content.targeted_takedown_fineprint') %></p>
 			</div>
-
 			<div class="clear"></div>
 		</div>
-
 		<div class="col-md-7">
 			<div id="targeted_dmca_graph" class="bar_graph_horizontal"></div>
 		</div>
 		<div class="clear"></div>
 	</div>
 </div>
-
-
 <div class="clear"></div>
-
 <!-- Translations for JS -->
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
 <input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
@@ -500,7 +442,6 @@
 <input type="hidden" id="t_uruguay" value="<%= t('graph.uy') %> ">
 <input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
 <input type="hidden" id="t_venezuela" value="<%= t('graph.ven') %> ">
-
 
 <input type="hidden" id="t_arabic_wikipedia" value="<%= t('graph.arabic_wikipedia') %>">
 <input type="hidden" id="t_azerbaijani_wikipedia" value="<%= t('graph.azerbaijani_wikipedia') %>">
