--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,11 +4,10 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="//www.wikimedia.org/static/favicon/wmf.ico" />
+		<link rel="shortcut icon" href="https://www.wikimedia.org/static/favicon/wmf.ico">
 		<title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
-
 		<!-- Piwik -->
-		<script type="text/javascript">
+		<script>
 			var _paq = _paq || [];
 			_paq.push(['trackPageView']);
 			_paq.push(['enableLinkTracking']);
@@ -21,27 +20,24 @@
 			})();
 		</script>
 		<!-- End Piwik Code -->
-
 		<%= stylesheet_link_tag "bootstrap.min.css" %>
 		<%= stylesheet_link_tag "master.css" %>
 		<%= stylesheet_link_tag "graph.css" %>
-		<%= javascript_include_tag  "all" %>
+		<%= javascript_include_tag "all" %>
 	</head>
-
 	<body class="<%= page_classes %>">
 		<div class="container">
 			<header>
 				<nav class="navbar navbar-default" role="navigation">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+						<button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-
 						<a class="navbar-brand" href="<%= locale_url('./') %>">
-							<img src="./images/logo.png" />
+							<img src="./images/logo.png">
 							<% if request.path != 'index.html'  %>
 								<span class="name"><%= t('menu.title') %></span>
 							<% end %>
@@ -57,9 +53,7 @@
 					</div>
 				</nav>
 			</header>
-
 			<%= yield %>
-
 			<footer>
 				<div class="footer__block col-md-5">
 					<a href="<%= locale_url('./') %>" class="home_link">
@@ -67,7 +61,6 @@
 						<span><%= t('menu.title') %></span>
 					</a>
 				</div>
-
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><%= link_to t('menu.privacy'), locale_url('./privacy.html') %></li>
@@ -75,7 +68,6 @@
 						<li><%= link_to t('menu.faq'), locale_url('./faq.html') %></li>
 					</ul>
 				</div>
-
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><a href="//meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
@@ -84,7 +76,6 @@
 						<li><a href="//meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 					</ul>
 				</div>
-
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><a href="//wikimediafoundation.org"><%= t('menu.about_us') %></a></li>
@@ -92,13 +83,9 @@
 						<li><a href="//wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
-
 				<div class="clear"></div>
-
-				<div class='license small'><%= t('license') %></div>
-
+				<div class="license small"><%= t('license') %></div>
 			</footer>
-
 		</div>
 	</body>
 </html>
