--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -6,37 +6,33 @@
 		</span>
 	</h1>
 </div>
-
 <div class="col-md-12">
 	<p class="lead">
 		<%= t('home.lead') %>
 	</p>
 </div>
-
 <div class="col-md-4">
 	<a href="privacy.html" class="story bignav">
 		<h3><%= t('home.privacy') %></h3>
-		<hr/>
+		<hr>
 		<p>
 			<img class="icon" src="./images/userdata.svg">
 		</p>
 	</a>
 </div>
-
 <div class="col-md-4">
 	<a href="content.html" class="story bignav">
 		<h3><%= t('home.content') %></h3>
-		<hr/>
+		<hr>
 		<p>
 			<img class="icon" src="./images/content1.svg">
 		</p>
 	</a>
 </div>
-
 <div class="col-md-4">
 	<a href="faq.html" class="story bignav">
 		<h3><%= t('home.faq') %></h3>
-		<hr/>
+		<hr>
 		<p>
 			<img class="icon" src="./images/faq.svg">
 		</p>
@@ -48,9 +44,9 @@
 <blockquote class="middle">
     <p><%= t('home.quote') %></p>
     <footer>
-      <a href="//commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
-				<img src="./images/nadine.jpg">
-			</a>
+      <a href="https://commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
+			<img src="./images/nadine.jpg">
+		</a>
       <p><%= t('home.cite') %></p>
     </footer>
   </blockquote>
